--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>TroefCall Online - About</title>
     <meta name="description" content="">
-    <meta name="author" content="Shanny Anoep">
+    <meta name="author" content="Tirtha Chatterjee">
     <meta name="google-site-verification" content="ncD4u35s87_2UUusay9XhsvZ8PvgUFgBoeoQTdMD53A" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -43,10 +43,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">TroefCall Online</a>
+          <a class="brand" href="#">28 Online</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li><a href="/">Home</a></li>
+              <li><a href="index.html">Home</a></li>
               <li class="active"><a href="about.html">About</a></li>
               <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -58,7 +58,7 @@
     <div class="container">
 <div class="hero-unit">
             <h1>About</h1>
-              <p>TroefCall Online is begonnen als een hobby project om mezelf Python en HTML5 technieken te leren. Alle code is beschikbaar op <a href="https://github.com/nagazuka/websocket-cardgame">GitHub</a>. Ik heb de volgende tools hiervoor gebruikt:</p>
+              <p>This game is an online version of the popular Indian card game, 28.</p>
           </div>
 
           <div class="row-fluid">
@@ -96,38 +96,25 @@
             </div><!--/span-->
             <div class="span4">
               <h2>Source code</h2>
-                <p>Github <a href="https://github.com/nagazuka/websocket-cardgame">link</a></p>
+                <p>Github</p>
             </div><!--/span-->
           </div><!--/row-->
 
         <div class="row-fluid">
           <div class="span12">&nbsp;</div>
           <div style="position:relative; width:728px; margin:auto;">
-          <script type="text/javascript"><!--
-          google_ad_client = "ca-pub-3964219600595733";
-          /* Troefcall Online */
-          google_ad_slot = "2259581847";
-          google_ad_width = 728;
-          google_ad_height = 90;
-          //-->
-          </script>
-          <script type="text/javascript"
-            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
           </div>
         </div>
       <hr>
-     <!-- 
       <div class="row-fluid">
         <div class="span12">
           <div id="copyright">
             <footer>
-              <p>&copy; Shanny Anoep 2012</p>
+              <p>&copy; Tirtha Chatterjee 2012</p>
             </footer>
           </div>
         </div>
       </div>
-    -->
     </div> <!-- /container -->
 
     <!-- Le javascript
