--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>TroefCall Online</title>
+    <title>28 Online</title>
     <meta name="description" content="">
-    <meta name="author" content="Shanny Anoep">
+    <meta name="author" content="Tirtha Chatterjee">
     <meta name="google-site-verification" content="ncD4u35s87_2UUusay9XhsvZ8PvgUFgBoeoQTdMD53A" />
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
@@ -37,14 +37,6 @@
   <body>
 
     <div id="fb-root"></div>
-      <script>(function(d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) return;
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=" + settings.FACEBOOK_APPID;
-        fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-      </script>
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -53,7 +45,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">TroefCall Online</a>
+          <a class="brand" href="#">28 Online</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="/">Home</a></li>
@@ -70,7 +62,7 @@
   <div class="span12">
 
     <div id="progressOverlay">
-        <h1 id="txtLoading">Bezig met laden...</h1>
+        <h1 id="txtLoading">Loading...</h1>
         <div class="progress progress-danger progress-striped active">
           <div id="progressBar" class="bar" style="width: 0%"></div>
         </div>
@@ -82,10 +74,9 @@
 
     <div id="browserLinks">
       <p>
-      Je huidige browser is te oud voor TroefCall Online. Download een modernere browser en probeer het opnieuw. Probeer 1 van onderstaande links:
+      Your current browser is too old for 28 Online. Download a modern browser and try again. Try 1 of the following links:
       <a href="https://www.google.com/chrome?hl=nl">Google Chrome</a>
       <a href="www.mozilla.org/nl/firefox/">Firefox</a>
-      Deze browsers zijn meestal ook veiliger en sneller...
       </p>
     </div>
     
@@ -99,65 +90,62 @@
   <div id="welcomeModal" class="modal hide fade"> 
     <div class="modal-header">
       <a id="closePlayerName" href="#" class="close" data-dismiss="modal">&times;</a>
-      <h3>Welkom bij TroefCall Online</h3>
+      <h3>Welcome to 28 Online</h3>
     </div>
     <form id="formPlayerName" class="well">
     <div class="modal-body">
-      <p>Voordat we beginnen met TroefCall Online, eerst je naam invoeren:</p>
-     <label>Naam</label>
-      <input id="inputPlayerName" type="text" class="span3" placeholder="Typ je naam"> <span class="help-inline">&nbsp;</span>
+      <p>Before we start 28 Online, your first name:</p>
+      <input id="inputPlayerName" type="text" class="span3" placeholder="Type your name"> <span class="help-inline">&nbsp;</span>
    </div>
    <div class="modal-footer">
-     <button type="submit" class="btn btn-primary btn-large">Starten</button>
+     <button type="submit" class="btn btn-primary btn-large">Start</button>
    </div>
    </form>
   </div>
-      
-  <div id="disconnectModal" class="modal hide fade"> 
+
+  <div id="callModal" class="modal hide fade"> 
+    <div class="modal-header">
+      <h3>Make a call</h3>
+    </div>
+    <form id="formCall" class="well">
+    <div class="modal-body">
+      <p>You must make a call greater than or equal to <span id="minCallValue"></span> or pass.</p>
+      <input id="inputCall" type="text" class="span3" placeholder="Your call">
+   </div>
+   <div class="modal-footer">
+     <button type="submit" class="btn btn-primary btn-large">Call</button>
+     <a href="#" class="btn btn-primary btn-large" id="passCall">Pass</a>
+   </div>
+   </form>
+  </div>
+
+  <div id="disconnectModal" class="modal hide fade">
     <div class="modal-header">
       <a id="closeModalHeader" href="#" class="close" data-dismiss="modal">&times;</a>
-      <h3>Oh oh...</h3>
+      <h3>Uh-Oh...</h3>
     </div>
     <form id="formPlayerName" class="well">
       <div class="modal-body">
-        <h3>Verbinding verloren</h3>
-        <p>Het lijkt erop dat de verbinding met TroefCall Online is verloren. Check je internet toegang even en probeer het later opnieuw. Sorry...</p>
+        <h3>Connection Lost</h3>
+        <p>It seems that the connection to 28 Online is lost. Check your internet access here and try again later. Sorry ...</p>
       </div>
       <div class="modal-footer">
-          <button type="submit" class="btn btn-primary">Opnieuw laden</button>
+          <button type="submit" class="btn btn-primary">Reload</button>
       </div>
     </form>
   </div>
 </div>
 
-        <div class="row-fluid">
-          <div class="span12">&nbsp;</div>
-          <div style="position:relative; width:728px; margin:auto;">
-          <script type="text/javascript"><!--
-          google_ad_client = "ca-pub-3964219600595733";
-          /* Troefcall Online */
-          google_ad_slot = "2259581847";
-          google_ad_width = 728;
-          google_ad_height = 90;
-          //-->
-          </script>
-          <script type="text/javascript"
-            src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-          </script>
-          </div>
-        </div>
-      <hr>
-     <!-- 
+     <hr>
       <div class="row-fluid">
         <div class="span12">
           <div id="copyright">
             <footer>
-              <p>&copy; Shanny Anoep 2012</p>
+              <p>&copy; Tirtha Chatterjee 2012</p>
             </footer>
           </div>
         </div>
       </div>
-    -->
     </div> <!-- /container -->
 
     <!-- Le javascript
@@ -181,16 +169,5 @@
     <script src="behaviour/engine.js" type="text/javascript"></script>
     <script src="behaviour/messagehandler.js" type="text/javascript"></script>
     <script src="behaviour/application.js" type="text/javascript"></script>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', settings.GOOGLE_ANALYTICS_CODE]);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
   </body>
 </html>
